# libprettylogger

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: Ubuntu.yml  cargo-deny.yml  deny.yml  whitespaces.yml
scripts/: whitespaces
src/: \  colors.rs  config.rs  fileio.rs  filtering.rs  format.rs  formatting.rs  getters.rs  glob.rs  json.rs  lib.rs  logging.rs  output.rs  printing.rs  setters.rs  tests.rs
src/utils/: colors.rs  filtering.rs  formatting.rs  mod.rs  printing.rs
templates/: default.json
