[package]
name = "libprettylogger"
version = "1.0.0"
authors = ["tpaau-17DB"]
edition = "2021"
rust_version = "1.78.0"
description = "A highly customizable logger library."
readme = "README.md"
homepage = "https://github.com/tpaau-17DB/libprettylogger"
repository = "https://github.com/tpaau-17DB/libprettylogger"
license = "(MIT OR Apache-2.0) AND Unicode-3.0"
keywords = ["logger", "customizable", "log-levels", "log-filtering", "log-formatting"]
categories = ["development-tools"]
exclude = ["output.log", "templates/test.json"]

[dependencies]
lazy_static = "1.4"
chrono = "0.4"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "prettylogger"
