[package]
name = "libprettylogger"
version = "3.0.0"
authors = ["tpaau-17DB"]
edition = "2021"
description = "Highly customizable logger library."
readme = "README.md"
homepage = "https://github.com/tpaau-17DB/libprettylogger"
repository = "https://github.com/tpaau-17DB/libprettylogger"
license = "(MIT OR Apache-2.0) AND Unicode-3.0"
keywords = ["logger", "customizable", "log-levels", "log-filtering", "log-formatting"]
categories = ["development-tools"]
exclude = ["output.log", "templates/test.json"]

[dependencies]
lazy_static = "1.5"
chrono = "0.4.41"
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
rand = "0.8"

[lib]
name = "prettylogger"
